--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ayanmalaviya.github.io/CARDEX",
+  "homepage": "https://hetshahAI.github.io/Motoguide-CarWebsite",
   "name": "motoguide",
   "version": "0.1.0",
   "private": true,
@@ -13,7 +13,6 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
-    "gh-pages": "^6.3.0",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -23,6 +22,9 @@
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
